--- a/app/src/main/res/layout/custom_genre.xml
+++ b/app/src/main/res/layout/custom_genre.xml
@@ -3,13 +3,29 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content">
-    <TextView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/custom_text"
-        android:layout_gravity="center"
-        android:text="xxxx"
-        android:textAlignment="center"
-        android:textSize="30dp"
-        />
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+
+        >
+
+        <LinearLayout
+            android:id="@+id/linier_genre"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/colorPrimary"
+            >
+
+            <TextView
+                android:id="@+id/custom_text"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="center_horizontal"
+                android:text="xxxx"
+                android:textAlignment="center"
+                android:textSize="30dp" />
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
+
 </LinearLayout>
