--- a/app/src/main/res/layout/custom_genre_detail.xml
+++ b/app/src/main/res/layout/custom_genre_detail.xml
@@ -19,7 +19,7 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentRight="true"
                 android:scaleType="fitXY"
-                android:src="@drawable/ic_image_testing"/>
+                android:src="@drawable/no_image"/>
             <TextView
                 android:id="@+id/rating"
                 android:layout_width="wrap_content"
