--- a/app/src/main/res/layout/fragment_tab.xml
+++ b/app/src/main/res/layout/fragment_tab.xml
@@ -7,4 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="fragment tab 1"/>
+    <android.support.v7.widget.RecyclerView
+        android:layout_width=""
+        android:layout_height=""></android.support.v7.widget.RecyclerView>
 </LinearLayout>
