--- a/app/src/main/res/layout/custom_genre_detail.xml
+++ b/app/src/main/res/layout/custom_genre_detail.xml
@@ -1,39 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
+
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <RelativeLayout
             android:layout_width="fill_parent"
-            android:layout_height="200dp"
-            android:padding="3dp"
-            >
+            android:layout_height="230dp"
+            android:padding="3dp">
 
-            <ImageView
-                android:id="@+id/poster"
-                android:layout_width="fill_parent"
+            <RelativeLayout
+                android:id="@+id/r_image"
+                android:layout_width="match_parent"
+                android:layout_height="170dp">
+
+                <ImageView
+                    android:id="@+id/poster"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentRight="true"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/no_image" />
+
+                <TextView
+                    android:id="@+id/rating"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginBottom="0dp"
+                    android:layout_marginRight="0dp"
+                    android:background="@drawable/lingkaran"
+                    android:padding="10dp"
+                    android:text="10"
+                    android:textColor="#E82C0C"
+                    android:textSize="10dp" />
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentRight="true"
-                android:scaleType="fitXY"
-                android:src="@drawable/no_image"/>
-            <TextView
-                android:id="@+id/rating"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_marginBottom="10dp"
-                android:layout_alignParentRight="true"
-                android:layout_marginRight="0dp"
-                android:text="10"
-                android:textSize="10dp"
-                android:textColor="#E82C0C"
-                android:background="@drawable/lingkaran"
-                android:padding="10dp"
-                />
+                android:layout_below="@id/r_image"
+                android:background="#82a0a8a4">
+
+                <RelativeLayout
+                    android:id="@+id/t_titik1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="#4abeccc5">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/judul_movie"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:text="Judul Movie........."
+                            android:layout_weight="0.1"
+                            android:textSize="13sp"
+                            android:layout_gravity="center_vertical"
+                            android:gravity="center_vertical"
+                            android:textColor="#000000"
+                            android:paddingLeft="5dp"
+                            />
+                            <ImageView
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:src="@drawable/ic_more"
+
+                                android:layout_weight="0.9"
+                                />
+                    </LinearLayout>
+
+                </RelativeLayout>
+            </RelativeLayout>
+
+
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 </LinearLayout>
