--- a/app/src/main/res/layout/tv_layout.xml
+++ b/app/src/main/res/layout/tv_layout.xml
@@ -4,21 +4,19 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="tv show fragment"
+        />
     <android.support.design.widget.TabLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/tab_layout"
-        android:background="#000000"
         android:scrollbars="horizontal"
         app:tabGravity="center"
         app:tabMode="scrollable"
-        app:tabTextColor="@color/cardview_light_background"
-        app:tabSelectedTextColor="@color/cardview_light_background"
         >
+
     </android.support.design.widget.TabLayout>
-    <android.support.v4.view.ViewPager
-        android:layout_width="match_parent"
-        android:layout_height="fill_parent"
-        android:id="@+id/pager"
-        ></android.support.v4.view.ViewPager>
 </LinearLayout>
