--- a/app/src/main/res/menu/activity_main2_drawer.xml
+++ b/app/src/main/res/menu/activity_main2_drawer.xml
@@ -4,6 +4,7 @@
     <group android:checkableBehavior="single"
         android:id="@+id/menu1">
         <item
+            android:checked="true"
             android:id="@+id/nav_movie"
             android:icon="@drawable/movie"
             android:title="Movie" />
