--- a/app/src/main/res/layout/movie_layout.xml
+++ b/app/src/main/res/layout/movie_layout.xml
@@ -12,13 +12,12 @@
         android:scrollbars="horizontal"
         app:tabGravity="center"
         app:tabMode="scrollable"
-        app:tabTextColor="@color/cardview_light_background"
-        app:tabSelectedTextColor="@color/cardview_light_background"
         >
     </android.support.design.widget.TabLayout>
     <android.support.v4.view.ViewPager
         android:layout_width="match_parent"
         android:layout_height="fill_parent"
         android:id="@+id/pager"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
         ></android.support.v4.view.ViewPager>
 </LinearLayout>
