--- a/app/src/main/res/layout/tv_layout.xml
+++ b/app/src/main/res/layout/tv_layout.xml
@@ -10,12 +10,17 @@
         android:text="tv show fragment"
         />
     <android.support.design.widget.TabLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:id="@+id/tab_layout"
-        android:scrollbars="horizontal"
-        app:tabGravity="center"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:background="@android:color/transparent"
+        app:tabGravity="fill"
         app:tabMode="scrollable"
+        app:tabTextAppearance="@style/TextAppearance.Design.Tab"
+        app:tabSelectedTextColor="@color/colorPrimary"
+        app:tabIndicatorColor="@color/colorPrimary"
+        android:overScrollMode="never"
+
         >
 
     </android.support.design.widget.TabLayout>
