--- a/app/src/main/res/layout/movie_now_playing.xml
+++ b/app/src/main/res/layout/movie_now_playing.xml
@@ -7,6 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/rv_movie"
+        android:padding="10dp"
         >
     </android.support.v7.widget.RecyclerView>
 </LinearLayout>
