--- a/app/src/main/res/layout/movie_upcoming.xml
+++ b/app/src/main/res/layout/movie_upcoming.xml
@@ -2,9 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <TextView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="Upcoming"
-        />
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/rv_movie"
+        ></android.support.v7.widget.RecyclerView>
+
 </LinearLayout>
