--- a/app/src/main/res/layout/activity_detail_movie.xml
+++ b/app/src/main/res/layout/activity_detail_movie.xml
@@ -43,17 +43,24 @@
                         android:layout_height="0dp"
                         android:layout_weight="0.6">
 
-                        <com.synnapps.carouselview.CarouselView
-                            android:id="@+id/carouselView"
+                        <com.daimajia.slider.library.SliderLayout
+                            android:id="@+id/slider"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:fitsSystemWindows="true"
-                            app:fillColor="#FFFFFFFF"
-                            app:layout_collapseMode="parallax"
-                            app:pageColor="#00000000"
-                            app:radius="6dp"
-                            app:strokeColor="#FF777777"
-                            app:strokeWidth="1dp" />
+                            />
+
+                        <!--<com.synnapps.carouselview.CarouselView-->
+                            <!--android:id="@+id/carouselView"-->
+                            <!--android:layout_width="match_parent"-->
+                            <!--android:layout_height="match_parent"-->
+                            <!--android:fitsSystemWindows="true"-->
+                            <!--app:fillColor="#FFFFFFFF"-->
+                            <!--app:layout_collapseMode="parallax"-->
+                            <!--app:pageColor="#00000000"-->
+                            <!--app:radius="6dp"-->
+                            <!--app:strokeColor="#FF777777"-->
+                            <!--app:strokeWidth="1dp" />-->
                     </LinearLayout>
 
                     <LinearLayout
