--- a/app/src/main/res/layout/activity_detail_movie.xml
+++ b/app/src/main/res/layout/activity_detail_movie.xml
@@ -7,12 +7,6 @@
     android:fitsSystemWindows="true"
     tools:context="com.example.mikie.moviereview.activity.DetailMovie">
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/view_pager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"></android.support.v4.view.ViewPager>
-
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar"
         android:layout_width="match_parent"
@@ -25,9 +19,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
-            app:contentScrim="?attr/colorPrimary"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed"
-            app:titleEnabled="false">
+            app:contentScrim="#284848"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <FrameLayout
                 android:layout_width="match_parent"
@@ -49,18 +42,6 @@
                             android:layout_height="match_parent"
                             android:fitsSystemWindows="true"
                             />
-
-                        <!--<com.synnapps.carouselview.CarouselView-->
-                            <!--android:id="@+id/carouselView"-->
-                            <!--android:layout_width="match_parent"-->
-                            <!--android:layout_height="match_parent"-->
-                            <!--android:fitsSystemWindows="true"-->
-                            <!--app:fillColor="#FFFFFFFF"-->
-                            <!--app:layout_collapseMode="parallax"-->
-                            <!--app:pageColor="#00000000"-->
-                            <!--app:radius="6dp"-->
-                            <!--app:strokeColor="#FF777777"-->
-                            <!--app:strokeWidth="1dp" />-->
                     </LinearLayout>
 
                     <LinearLayout
@@ -178,9 +159,15 @@
             android:background="#6890A0"
             app:layout_anchorGravity="bottom"
             app:tabGravity="fill"
-            app:tabIndicatorColor="#779BA9"
+            app:tabIndicatorColor="#90A8B0"
             app:tabMode="fixed"></android.support.design.widget.TabLayout>
     </android.support.design.widget.AppBarLayout>
-    <!--<include layout="@layout/content_detail_movie" />-->
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/view_pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+    </android.support.v4.view.ViewPager>
 
 </android.support.design.widget.CoordinatorLayout>
