--- a/app/src/main/res/layout/casting_detail.xml
+++ b/app/src/main/res/layout/casting_detail.xml
@@ -7,5 +7,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/rv_casting"
+        android:layout_margin="10dp"
         ></android.support.v7.widget.RecyclerView>
 </LinearLayout>
