--- a/app/src/main/res/layout/custom_casting_detail.xml
+++ b/app/src/main/res/layout/custom_casting_detail.xml
@@ -3,22 +3,25 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    >
 
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    <!--<android.support.v7.widget.CardView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content">-->
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:paddingTop="3dp"
+            android:paddingBottom="3dp"
+            >
 
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.7"
-                android:layout_marginLeft="20dp"
                 >
                 <RelativeLayout
                     android:layout_width="match_parent"
@@ -48,7 +51,6 @@
                 android:layout_weight="0.3"
                 android:layout_gravity="center_vertical"
                 android:gravity="center_vertical"
-                android:layout_marginRight="20dp"
                 >
                 <TextView
                     android:id="@+id/casting_job"
@@ -59,5 +61,5 @@
                     />
             </LinearLayout>
         </LinearLayout>
-    </android.support.v7.widget.CardView>
+    <!--</android.support.v7.widget.CardView>-->
 </LinearLayout>
