--- a/app/src/main/res/layout/activity_detail_movie.xml
+++ b/app/src/main/res/layout/activity_detail_movie.xml
@@ -6,7 +6,6 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     tools:context="com.example.mikie.moviereview.activity.DetailMovie">
-
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar"
         android:layout_width="match_parent"
@@ -20,6 +19,8 @@
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
             app:contentScrim="#284848"
+            app:titleEnabled="false"
+            android:background="#ffffff"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <FrameLayout
@@ -117,6 +118,7 @@
                                         android:text="Annabelle: Creation"
                                         android:textSize="22sp"
                                         android:textStyle="bold"
+                                        android:id="@+id/judul_movie"
                                         />
                                     <TextView
                                         android:layout_width="match_parent"
@@ -124,6 +126,7 @@
                                         android:text="Thriller, Horror"
                                         android:textSize="15sp"
                                         android:layout_marginTop="10dp"
+                                        android:id="@+id/genre"
                                         />
                                 </LinearLayout>
                             </LinearLayout>
@@ -140,7 +143,9 @@
                     android:layout_marginTop="115dp"
                     android:adjustViewBounds="true"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/no_image" />
+                    android:src="@drawable/no_image"
+                    android:id="@+id/logo"
+                    />
             </FrameLayout>
 
             <android.support.v7.widget.Toolbar
