--- a/app/src/main/res/layout/review_detail_movie.xml
+++ b/app/src/main/res/layout/review_detail_movie.xml
@@ -2,11 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="10dp">
+    android:layout_height="match_parent">
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/rv_review"
+        android:layout_margin="10dp"
         ></android.support.v7.widget.RecyclerView>
 </LinearLayout>
