--- a/app/src/main/res/layout/info_detail_movie.xml
+++ b/app/src/main/res/layout/info_detail_movie.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="10dp"
-    >
+
     <ScrollView
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:scrollbars="vertical"
+        android:padding="10dp"
+
+        >
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -136,8 +136,9 @@
                     android:text="Trailers"
                     />
                 <android.support.v7.widget.RecyclerView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/rv_trailer">
                 </android.support.v7.widget.RecyclerView>
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -202,8 +203,9 @@
                     android:text="Similar Movie"
                     />
                 <android.support.v7.widget.RecyclerView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/rv_similar">
                 </android.support.v7.widget.RecyclerView>
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -216,4 +218,3 @@
 
     </ScrollView>
 
-</LinearLayout>
